<resources>
    <string name="app_name">My App2</string>
    <string name="action_settings">Settings</string>
    <string name="team_list_fragment_label">Team List</string>
    <string name="team_edit_fragment_label">Team Edit</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">name:</string>
    <string name="location">location:</string>
    <string name="leadership">leadership:</string>
    <string name="gamesPlayed">gamesPlayed:</string>
</resources>